force-app/main/default/objects/Apttus__AlternateClause__c/Apttus__AlternateClause__c.object-meta.xml
<CustomObject>
    <label>Alternate Clause</label>
    <nameField>
        <displayFormat>AC{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>