force-app/main/default/objects/Apttus__AlternateClause__c/fields/Apttus__ClauseConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseConfigurationId__c</fullName>
    <description>ID of the clause configuration record</description>
    <inlineHelpText>ID of the clause configuration record</inlineHelpText>
    <label>Clause Configuration</label>
    <referenceTo>Apttus__ClauseConfiguration__c</referenceTo>
    <relationshipLabel>Alternate Clauses</relationshipLabel>
    <relationshipName>Alternate_Clauses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>