force-app/main/default/objects/Apttus__AlternateClause__c/fields/Apttus__ClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the clause used to replace the the Standard Clause</description>
    <inlineHelpText>ID of the clause used to replace the the Standard Clause</inlineHelpText>
    <label>Clause</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Alternate Clauses</relationshipLabel>
    <relationshipName>AlternateClauses</relationshipName>
    <type>Lookup</type>
</CustomField>