force-app/main/default/objects/Apttus__AlternateClause__c/fields/Apttus__ClauseRanking__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseRanking__c</fullName>
    <description>Priority order of  the Alternate Clause</description>
    <inlineHelpText>Priority order of  the Alternate Clause</inlineHelpText>
    <label>Clause Ranking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>